hphp/hack/test/typecheck/typing_function2.php.exp
File "typing_function2.php", line 19, characters 8-21:
The builtin `call_user_func` is deprecated. (Typing[4128])
